<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tvTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/etNameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitleLogin"
        android:layout_marginBottom="5dp"
        android:hint="@string/name"
        android:inputType="text"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNameLogin"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordLogin"
        android:text="@string/enter"
        android:background="@drawable/gradient_button"
        android:visibility="invisible" />
</merge>