<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/tvPodiumWinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_and_third_position"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tvTitleWinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_winner"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@android:color/white"/>

        <RelativeLayout
            android:id="@+id/container_pilots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tvTitleWinner">

        <ImageView
            android:id="@+id/ivRosberg"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/content_description"
            android:background="@drawable/rosberg" />

        <ImageView
            android:id="@+id/ivAlonso"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_toRightOf="@id/ivRosberg"
            android:layout_toEndOf="@+id/ivRosberg"
            android:layout_margin="10dp"
            android:contentDescription="@string/content_description"
            android:background="@drawable/alonso" />

        <ImageView
            android:id="@+id/ivHamilton"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_toRightOf="@id/ivAlonso"
            android:layout_toEndOf="@+id/ivAlonso"
            android:layout_margin="10dp"
            android:contentDescription="@string/content_description"
            android:background="@drawable/hamilton" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvNameWinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_winner"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_below="@+id/container_pilots"
            android:textColor="@android:color/white"/>

</merge>